feat(licenses): integrate mappers for license and product responses
- Replace manual response mapping with `LicenseTypeMapper` and `ProductMapper`.
- Refactor `LicenseService` and `LicenseTypeService` for cleaner code using mappers.
- Add new `ProductMapper` and `LicenseTypeMapper` components.
- Update DTOs to use nested objects for `LicenseType` and `Product`.
- Adjust tests to accommodate mapper usage and nested response structures.